// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FormRow Default 1`] = `
<form>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <div
          className="sc-bwzfXH dRGel"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            What is your name?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH evgYKs"
      >
        <div
          className="sc-bwzfXH dRGel"
        >
          <div
            className="sc-bwzfXH dvoLGo"
          >
            <div
              className="sc-eNQAEJ lhLkZ"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-ckVGcZ kdxLRP"
                disabled={undefined}
              >
                <span
                  className="sc-jKJlTe eFYypy"
                >
                  Initials
                </span>
              </div>
              <input
                className="sc-dxgOiQ iSQIum"
                disabled={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH cgnXvs"
          >
            <div
              className="sc-eNQAEJ lhLkZ"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-ckVGcZ kdxLRP"
                disabled={undefined}
              >
                <span
                  className="sc-jKJlTe eFYypy"
                >
                  First name
                </span>
              </div>
              <input
                className="sc-dxgOiQ iSQIum"
                disabled={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bwzfXH epQtTt"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Surname
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <div
          className="sc-bwzfXH dRGel"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Where do you live?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH evgYKs"
      >
        <div
          className="sc-bwzfXH epQtTt"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Country
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-bwzfXH epQtTt"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                City
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <div
          className="sc-bwzfXH dRGel"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Can a boolean only be either true or false?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH clfeTd"
      >
        <div
          className="sc-bwzfXH dTTCsT"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={true}
                className="sc-kpOJdX kxmcXw"
              >
                <input
                  checked={true}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH isLvox"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH isLvox"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots FormRow No Descriptions 1`] = `
<form>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          What is your name?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH evgYKs"
      >
        <div
          className="sc-bwzfXH gtYTvg"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Name
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Where do you live?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH evgYKs"
      >
        <div
          className="sc-bwzfXH gtYTvg"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Country
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Can a boolean only be true or false?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-bwzfXH clfeTd"
      >
        <div
          className="sc-bwzfXH dTTCsT"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={true}
                className="sc-kpOJdX kxmcXw"
              >
                <input
                  checked={true}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH isLvox"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH isLvox"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH doEFQb"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like toggles?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-kkGfuU jvfvYf"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH dRGel"
        >
          <div
            className="sc-bwzfXH kqlGkq"
          >
            <div
              checked={false}
              className="sc-kEYyzF brBMbf"
              disabled={undefined}
            >
              <input
                checked={false}
                className="sc-hMqMXs iiejKk"
                disabled={false}
                id="toggle"
                name="toggle"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
                value="toggle"
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH XrkjT"
          >
            <p
              className="sc-bxivhb jpexxn"
            >
               
              Toggle to indicate your preference!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH hiMhOx"
  >
    <div
      className="sc-bwzfXH jwEHml"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like checkboxes
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH OfNUB"
    >
      <div
        className="sc-jTzLTM hYTrgs"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH ctAWjx"
        />
        <input
          checked={false}
          className="sc-VigVT jXADSx"
          id={undefined}
          name="foo"
          onBlur={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="checkbox"
          value="bar"
        />
      </div>
    </div>
  </div>
</form>
`;
